// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`registry-derived override property maps derives the overridable properties for every metadata entity 1`] = `
{
  "agent": [],
  "applicationVariable": [],
  "commandMenuItem": [
    "label",
    "icon",
    "shortLabel",
    "position",
    "isPinned",
    "availabilityType",
    "availabilityObjectMetadataId",
    "engineComponentKey",
    "hotKeys",
    "pageLayoutId",
  ],
  "connectionProvider": [],
  "fieldMetadata": [
    "description",
    "icon",
    "label",
  ],
  "fieldPermission": [],
  "frontComponent": [],
  "index": [],
  "logicFunction": [],
  "navigationMenuItem": [],
  "objectMetadata": [
    "color",
    "description",
    "icon",
    "labelPlural",
    "labelSingular",
    "imageIdentifierFieldMetadataId",
  ],
  "objectPermission": [],
  "pageLayout": [],
  "pageLayoutTab": [
    "title",
    "position",
    "icon",
  ],
  "pageLayoutWidget": [
    "title",
    "position",
    "pageLayoutTabId",
    "conditionalDisplay",
    "conditionalAvailabilityExpression",
  ],
  "permissionFlag": [],
  "role": [],
  "rolePermissionFlag": [],
  "roleTarget": [],
  "rowLevelPermissionPredicate": [],
  "rowLevelPermissionPredicateGroup": [],
  "searchFieldMetadata": [],
  "skill": [],
  "view": [
    "name",
    "type",
    "icon",
    "position",
    "isCompact",
    "openRecordIn",
    "kanbanAggregateOperation",
    "kanbanAggregateOperationFieldMetadataId",
    "anyFieldFilterValue",
    "calendarLayout",
    "calendarFieldMetadataId",
    "calendarEndFieldMetadataId",
    "visibility",
    "mainGroupByFieldMetadataId",
    "shouldHideEmptyGroups",
    "kanbanColumnWidth",
  ],
  "viewField": [
    "isVisible",
    "size",
    "position",
    "aggregateOperation",
    "viewFieldGroupId",
  ],
  "viewFieldGroup": [
    "name",
    "position",
    "isVisible",
  ],
  "viewFilter": [],
  "viewFilterGroup": [],
  "viewGroup": [],
  "viewSort": [],
  "webhook": [],
}
`;

exports[`registry-derived override property maps derives the translatable properties for every metadata entity 1`] = `
{
  "agent": [],
  "applicationVariable": [],
  "commandMenuItem": [],
  "connectionProvider": [],
  "fieldMetadata": [
    "description",
    "label",
  ],
  "fieldPermission": [],
  "frontComponent": [],
  "index": [],
  "logicFunction": [],
  "navigationMenuItem": [],
  "objectMetadata": [
    "description",
    "labelPlural",
    "labelSingular",
  ],
  "objectPermission": [],
  "pageLayout": [],
  "pageLayoutTab": [],
  "pageLayoutWidget": [],
  "permissionFlag": [],
  "role": [],
  "rolePermissionFlag": [],
  "roleTarget": [],
  "rowLevelPermissionPredicate": [],
  "rowLevelPermissionPredicateGroup": [],
  "searchFieldMetadata": [],
  "skill": [],
  "view": [],
  "viewField": [],
  "viewFieldGroup": [],
  "viewFilter": [],
  "viewFilterGroup": [],
  "viewGroup": [],
  "viewSort": [],
  "webhook": [],
}
`;
